Fix every-other-row color in dark mode

--- a/maia_v2/static/maia_v2.css
+++ b/maia_v2/static/maia_v2.css
@@ -106,7 +106,7 @@ footer {
 }
 @media (prefers-color-scheme: dark) {
     .form-group:nth-child(odd) {
-        background-color: #2f353e;
+        background-color: #3a424e;
     }
 }
 legend {
